# Reversi

./: Board.cpp  Board.h  BoardLogic.cpp  BoardLogic.h  CMakeLists.txt  Disc.cpp  Disc.h  GameFlow.cpp  GameFlow.h  Menu.cpp  Menu.h  Player.cpp  Player.h  PlayerAI.cpp  PlayerAI.h  PlayerClient.cpp  PlayerClient.h  PlayerClientActive.cpp  PlayerClientActive.h  PlayerClientPassive.cpp  PlayerClientPassive.h  PlayerHuman.cpp  PlayerHuman.h  PlayerType.cpp  PlayerType.h  main.cpp  makefile
